fix: prevent text overflow in projects/show section headers

--- a/app/assets/stylesheets/projects/show2.scss
+++ b/app/assets/stylesheets/projects/show2.scss
@@ -1677,3 +1677,15 @@ $tip-opacity: 1;
     }
   }
 }
+
+.HeaderWithMoreLink {
+  display: flex;
+  span {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .btn {
+    line-height: 0;
+  }
+}
